- Move non-cpp tests out of cpp
- Move to Google Java Code Style
- Check commented out tests in surefire-plugin
- Fix maven warnings:
  - "Split package, multiple jars provide the same package"
  - [WARNING] bootstrap class path not set in conjunction with -source 8
    when using: mvn clean install -P on-jdk-9-plus
- CI: Fail build on warning?!
- CI: remove "temurin"...?!

--> See TODO.txt

Check:
- Demo -> Test?  E.g. DemoI? DemoSpace(-Stress)? DemoStep? ....


0.5.0 (unreleased)
=====
- Fix maven warnings of type "Use Import/Export Package directive -split-package [...]"
  [#101](https://github.com/tzaeschke/ode4j/pull/101)
- Port updates until 0.16.3. [#100](https://github.com/tzaeschke/ode4j/pull/100)
- Port updates until 0.16.2.
  This includes some libCCD updates missing fro the 0.15.1 update.
  This excludes improved solution finders with anything from *Cooperative* and ThreadedEquationSolverLDLT*.
  [#97](https://github.com/tzaeschke/ode4j/pull/97)
- Added GutHub Actions CI builds for Java 8 and 9. [#95](https://github.com/tzaeschke/ode4j/pull/95)
- Added default logger for demos and tests. [#94](https://github.com/tzaeschke/ode4j/pull/94)
- Added Android API compliance checker, now for API level 24 (the lowest that ode4j passed without changes)
  [#93](https://github.com/tzaeschke/ode4j/pull/93)
- Updated maven dependencies [#92](https://github.com/tzaeschke/ode4j/pull/92)
- Test that internal assertions did not throw Exceptions. This was fixed as part of #86.
  [#74](https://github.com/tzaeschke/ode4j/issues/74)
- Fixes to LWJGL 3.0 [#91](https://github.com/tzaeschke/ode4j/pull/91)
- Moved to LWJGL 3.0 [#89](https://github.com/tzaeschke/ode4j/issues/89)
- Move to Java [#87](https://github.com/tzaeschke/ode4j/issues/87)
  (Cleanup, part of this was done with the move to 0.15.1)
- Update to ODE 0.15.1 [#86](https://github.com/tzaeschke/ode4j/pull/86)
  - This includes increased stability, e.g. the DemoCards won't collapse anymore when 30 levels high.